--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2020.4.5.1
 chardet==3.0.4
 Django==3.0.5
 django-extensions==3.1.1
+django-filter==2.4.0
 djangorestframework==3.11.0
 djangorestframework-simplejwt==4.6.0
 idna==2.9
